Compiler/fasto/tests/or_neg1.err
Type error: In Or: one of subexpression types is not a boolean: int and bool at line 2, column 19