Compiler/fasto/tests/or_neg1.fo
fun int main () = 
  let w = write(1 || true) in 0